--- a/env.example
+++ b/env.example
@@ -1,89 +1,23 @@
-# ============================================================================
-# n8n Environment Variables Template
-# ============================================================================
-# This file shows all the environment variables needed for n8n deployment.
-# 
-# IMPORTANT: 
-# - Never commit your actual .env file to Git!
-# - Copy these values to Render Dashboard → Your Service → Environment
-# - Mark sensitive values (passwords, keys) as "Secret" in Render
-# ============================================================================
+# Copy these to Render Dashboard → Your Service → Environment
 
-# ============================================================================
-# AUTHENTICATION (REQUIRED)
-# ============================================================================
+# Authentication
 N8N_BASIC_AUTH_ACTIVE=true
 N8N_BASIC_AUTH_USER=admin
-N8N_BASIC_AUTH_PASSWORD=your_secure_password_here
-# ⚠️ Use a STRONG password! Consider using a password manager.
+N8N_BASIC_AUTH_PASSWORD=your_secure_password
 
-# ============================================================================
-# SERVER CONFIGURATION
-# ============================================================================
+# Server Configuration
 N8N_PORT=5678
 N8N_PROTOCOL=https
 N8N_LISTEN_ADDRESS=0.0.0.0
 N8N_HOST=your-service-name.onrender.com
-# ⚠️ Replace with your actual Render service name (will be auto-generated)
-
 WEBHOOK_URL=https://your-service-name.onrender.com/
-# ⚠️ Replace with your actual Render URL. Add this AFTER deployment.
 
-# ============================================================================
-# TIMEZONE
-# ============================================================================
-GENERIC_TIMEZONE=Asia/Manila
-# Options: America/New_York, Europe/London, Asia/Tokyo, etc.
-# Full list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
-# ============================================================================
-# NEON POSTGRESQL DATABASE (REQUIRED)
-# ============================================================================
-# Get these values from your Neon dashboard: https://console.neon.tech
-# Connection string format: postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require
-
+# Database (Neon PostgreSQL)
 DB_TYPE=postgresdb
-DB_POSTGRESDB_HOST=ep-xxxxx-xxxxx.ap-southeast-1.aws.neon.tech
-# ⚠️ Get from Neon dashboard → Connect → Connection string
-
+DB_POSTGRESDB_HOST=your-neon-host.ap-southeast-1.aws.neon.tech
 DB_POSTGRESDB_PORT=5432
-
 DB_POSTGRESDB_DATABASE=neondb
-# ⚠️ Your Neon database name (usually "neondb" or project name)
-
 DB_POSTGRESDB_USER=neondb_owner
-# ⚠️ Your Neon username (usually "neondb_owner" or project-specific name)
-
-DB_POSTGRESDB_PASSWORD=your_neon_password_here
-# ⚠️ Get from Neon dashboard → Connect → Password
-
+DB_POSTGRESDB_PASSWORD=your-neon-password
 DB_POSTGRESDB_SSLMODE=require
-# Neon requires SSL connections
-
-# ============================================================================
-# LOGGING & PERFORMANCE
-# ============================================================================
-N8N_LOG_LEVEL=debug
-# Options: debug, info, warn, error
-# Use 'debug' for troubleshooting, 'info' for production
-
-NODE_OPTIONS=--dns-result-order=ipv4first
-# Fixes DNS resolution issues on Render's free tier
-
-# ============================================================================
-# SECURITY (HIGHLY RECOMMENDED)
-# ============================================================================
-N8N_ENCRYPTION_KEY=
-# Generate a 32-character key with: openssl rand -hex 16
-# This encrypts stored credentials in your workflows
-# ⚠️ Never share this key or commit it to Git!
-
-# ============================================================================
-# OPTIONAL VARIABLES
-# ============================================================================
-# N8N_METRICS=true
-# N8N_DIAGNOSTICS_ENABLED=true
-# N8N_USER_FOLDER=/home/node/.n8n
-# EXECUTIONS_PROCESS=main
-# EXECUTIONS_MODE=regular
 
