--- a/render.yaml
+++ b/render.yaml
@@ -18,6 +18,8 @@ services:
         value: true
       - key: N8N_RUNNERS_ENABLED
         value: true
+      - key: N8N_TRUST_PROXY
+        value: true
       - key: GENERIC_TIMEZONE
         value: Asia/Manila
       - key: TZ
