--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,37 @@
-# Environment files
-.env
-.env.local
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Node modules (if you add any)
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# n8n data (if running locally)
-.n8n/
+# testing
+/coverage
 
-# OS files
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
+*.pem
 
-# IDE
-.vscode/
-.idea/
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-.cursorignore
+# local env files
+.env*.local
+.env
 
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
